Add initial code for impress.md.js

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,10 @@
         </script>
         -->
 
+        <!-- build:js({app,.tmp}) scripts/impress.md.js -->
+        <script src="scripts/impress.md.js"></script>
+        <!-- endbuild -->
+
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
