Convert markdown to html with marked

--- a/app/index.html
+++ b/app/index.html
@@ -28,9 +28,8 @@
 
 
         <!-- build:js scripts/vendor.js -->
-        <!-- bower:js -->
         <script src="bower_components/impress.js/js/impress.js"></script>
-        <!-- endbower -->
+        <script src="bower_components/marked/lib/marked.js"></script>
         <!-- endbuild -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
