--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,8 @@
         <meta name="viewport" content="width=1024">
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- build:css styles/vendor.css -->
-        <!-- bower:css -->
+        <!-- build:css(.tmp) styles/vendor.css -->
         <link rel="stylesheet" href="styles/impress.md.css">
-        <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
