--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="styles/impress.md.css">
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/sample.css">
         <!-- endbuild -->
     </head>
     <body>
